# ci-jobs-trigger

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  OWNERS  README.md  docker-compose.yaml  operators-latest-iib.json  pyproject.toml  pytest.ini  renovate.json  tox.ini  zstream-trigger-example.config.yaml
.github/: in-solidarity.yml
ci_jobs_trigger/: app.py
ci_jobs_trigger/libs/: zstream_trigger.py
ci_jobs_trigger/libs/addons_webhook_trigger/: README.md  addons_webhook_trigger.py
ci_jobs_trigger/libs/jenkins/utils/: general.py
ci_jobs_trigger/libs/openshift_ci/re_trigger/: README.md  job_db.py  re_trigger.py
ci_jobs_trigger/libs/openshift_ci/utils/: constants.py  general.py  openshift_ci.py
ci_jobs_trigger/libs/openshift_ci/zstream_trigger/: README.md  zstream_trigger.py
ci_jobs_trigger/libs/openshift_ci/ztream_trigger/: README.md  zstream_trigger.py
ci_jobs_trigger/libs/operators_iib_trigger/: README.md  iib_trigger.py
ci_jobs_trigger/libs/utils/: general.py
ci_jobs_trigger/tests/: conftest.py  utils.py
ci_jobs_trigger/tests/addons_webhook_trigger/: test_addons_webhook_trigger.py
ci_jobs_trigger/tests/job_retriggering/: test_job_triggering.py
ci_jobs_trigger/tests/job_retriggering/manifests/: junit_operator_failed_pre_phase.xml  junit_operator_failed_test_phase.xml
ci_jobs_trigger/tests/operators_iib_trigger/: test_operators_iib_trigger.py
ci_jobs_trigger/tests/zstream_trigger/: test_zstream_trigger.py
ci_jobs_trigger/tests/zstream_trigger/manifests/: versions.py
ci_jobs_trigger/utils/: constant.py  general.py
config-examples/: addons-webhook-trigger-config.example.yaml  ci-iib-jobs-trigger-config.example.yaml  zstream-trigger-config.example.yaml  zstream-trigger-example.config.yaml
